# ez-voice

./: .gitignore  .pre-commit-config.yaml  Agents.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: job-coverage-comment.yml  job-test.yml  on-pr.yml
skills/ez-stt/: SKILL.md
skills/ez-stt/references/: OPENCLAW.md
skills/ez-stt/scripts/: stt.py
skills/ez-tts/: OPENCLAW.md  SKILL.md
skills/ez-tts/scripts/: tts.py
tests/: conftest.py  test_e2e_stt.py  test_e2e_tts.py  test_stt.py  test_tts.py
