[project]
name = "ez-voice"
version = "0.1.0"
description = "Local speech-to-text and text-to-speech skills for Claude Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "huggingface-hub>=1.7.2",
    "onnx-asr>=0.10.2",
    "onnxruntime>=1.24.4",
    "pocket-tts>=1.1.1",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.4",
    "prek>=0.3.4",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ty>=0.0.19",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "e2e: end-to-end tests that download and run real models (slow)",
]

[tool.coverage.run]
source = ["skills/ez-stt/scripts", "skills/ez-tts/scripts"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
src_paths = "tests"
line_length = 80
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
exclude = ["__pycache__", "terraform", ".git", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]
